--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: landing
 <div id="fullpage">
   <div id="about" class="section">
     <div class="section-content">
-      <img src="/assets/images/background.png"/>
+      <img src="{{ '/assets/images/background.png' | relative_url }}"/>
     </div>
   	<div class="section-content">
       <h1>{{ site.title }}</h1>
