--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@ layout: landing
   </div>
 	<div id="quickstart" class="section">
   	<div class="section-content">
-      <a href="/quickstart/"><h1>Quick Start Guides</h1></a>
+      <a href="{{ '/quickstart/' | relative_url }}"><h1>Quick Start Guides</h1></a>
     </div>
   </div>
 	<div id="FAQ" class="section">
   	<div class="section-content">
-      <a href="/FAQ/"><h1>Frequently Asked Questions</h1></a>
+      <a href="{{ '/FAQ/' | relative_url }}"><h1>Frequently Asked Questions</h1></a>
     </div>
   </div>
   <div id="blog" class="section">
   	<div class="section-content">
-      <a href="/blog/"><h1>Blog</h1></a>
+      <a href="{{ '/blog/' | relative_url }}"><h1>Blog</h1></a>
     </div>
   </div>
   <div id="lessons" class="section">
   	<div class="section-content">
-      <a href="/lessons/"><h1>Lessons</h1></a>
+      <a href="{{ '/lessons/' | relative_url }}"><h1>Lessons</h1></a>
     </div>
   </div>
   <div class="section fp-auto-height">
