--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ order:
     {% for post in posts limit:4 %}
     <div class="preview">
       <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+      <p>{{ post.excerpt }}</p>
     </div>
     {% endfor %}
     {% capture category_page %}/{{ cat }}/{% endcapture %}
