--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@ order:
     data-tooltip="{{ category[1] }}">
     {% assign posts = site.categories[cat] %}
     {% for post in posts limit: 2 %}
-    <div class="preview">
+    <div class="preview {{ post.category }}">
       <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
-      <p class="{{ post.category }}" id="{{ post.slug }}">
-        {{ post.excerpt | truncate: 250 }}
-      </p>
+      <p>{{ post.excerpt | truncate: 250 }}</p>
     </div>
     {% endfor %}
     {% capture category_page %}/{{ cat }}/{% endcapture %}
