--- a/index.html
+++ b/index.html
@@ -9,30 +9,32 @@ order:
 
 <div id="fullpage">
   <div class="first section" data-tooltip="">
-    <div>
-      <img src="{{ '/assets/images/background.png' | relative_url }}"/>
-    </div>
-  	<div>
-      <h1>{{ site.title }}</h1>
-      <h2>{{ site.subtitle }}</h2>
+    <div class="flex-container">
+      <div>
+        <img src="{{ '/assets/images/background.png' | relative_url }}"/>
+      </div>
+    	<div>
+        <h1>{{ site.title }}</h1>
+        <h2>{{ site.subtitle }}</h2>
+      </div>
     </div>
     <div id="downArrow"></div>
   </div>
   {% for category in page.order  %}
   {% assign cat = category[0] %}
-  <div id="{{ cat }}"
-    class="section"
-    data-tooltip="{{ category[1] }}">
-    {% assign posts = site.categories[cat] %}
-    {% for post in posts limit: 2 %}
-    <div class="preview {{ post.category }}">
-      <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
-      <p>{{ post.excerpt | truncate: 250 }}</p>
-    </div>
-    {% endfor %}
-    {% capture category_page %}/{{ cat }}/{% endcapture %}
-    <div class="preview more">
-      <a href="{{ category_page | relative_url }}">View More</a>
+  <div id="{{ cat }}" class="section" data-tooltip="{{ category[1] }}">
+    <div class="flex-container">
+      {% assign posts = site.categories[cat] %}
+      {% for post in posts limit: 7 %}
+      <div class="preview {{ post.category }}">
+        <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+        <p>{{ post.excerpt | truncate: 250 }}</p>
+      </div>
+      {% endfor %}
+      {% capture category_page %}/{{ cat }}/{% endcapture %}
+      <div class="preview">
+        <a href="{{ category_page | relative_url }}">View More</a>
+      </div>
     </div>
   </div>
   {% endfor %}
