--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ---
 layout: landing
 order:
- - [quickstart, Quick Start]
- - [faq, FAQ]
- - [blog, Blog]
+ - [quickstart, Quick Starts]
+ - [faq, FAQs]
+ - [blog, Blog Posts]
  - [lessons, Lessons]
 ---
 
 <div id="fullpage">
   <div class="first section" data-tooltip="">
     <div class="preview-wrapper">
-
+      <div>
         <img src="{{ '/assets/images/background.png' | relative_url }}"/>
-
+      </div>
     	<div>
         <h1>{{ site.title }}</h1>
         <h2>{{ site.subtitle }}</h2>
@@ -22,19 +22,19 @@ order:
   </div>
   {% for category in page.order  %}
   {% assign cat = category[0] %}
-  <div id="{{ cat }}" class="section" data-tooltip="{{ category[1] }}">
+  <div id="{{ cat }}" class="section">
     <div class="preview-wrapper">
-      {% assign posts = site.categories[cat] %}
-      {% for post in posts limit: 9 %}
-      <div class="preview {{ post.category }}">
-        <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
-        <p>{{ post.excerpt | truncate: 250 }}</p>
-      </div>
-      {% endfor %}
       {% capture category_page %}/{{ cat }}/{% endcapture %}
       <div class="preview more">
-        <a href="{{ category_page | relative_url }}">View More</a>
+        <a href="{{ category_page | relative_url }}"><p>view all...</p><h2>{{category[1]}}</h2></a>
       </div>
+      {% assign posts = site.categories[cat] %}
+      {% for post in posts %}
+      <div class="preview {{ post.category }}">
+        <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+        <p>{{ post.excerpt | strip_html | truncate: 250 }}</p>
+      </div>
+      {% endfor %}
     </div>
   </div>
   {% endfor %}
