--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ order:
  - [quickstart, Quick Starts]
  - [faq, FAQs]
  - [blog, Blog Posts]
- - [lessons, Lessons]
+ - [lesson, Lessons]
 ---
 
 <div id="fullpage">
