--- a/faq/_drafts/virtual-meeting-security.html
+++ b/faq/_drafts/virtual-meeting-security.html
@@ -367,7 +367,7 @@ summary {
 
 
 <p>Use of video conference platforms has exploded now that we are all working from home.</p>
-<p>SESYNC offers three platforms for virtual meetings. If you would like to set up a virtual meeting for your team, please contact {{ site.email }}. More info is on our <a href="https://cyberhelp.sesync.org/quickstart/procedure-for-having-remote-meeting-participants.html">cyberhelp page</a></p>
+<p>SESYNC offers three platforms for virtual meetings. If you would like to set up a virtual meeting for your team, please contact {{ site.email }}. More info is on our <a href="https://cyberhelp.sesync.org/quickstart/procedure-for-having-remote-meeting-participants.html">cyberhelp page</a>.</p>
 <p>Here are some links to help you change your settings to make your virtual meetings more secure.</p>
 <div id="skype-for-business" class="section level3">
 <h3>Skype for Business</h3>
