--- a/404.html
+++ b/404.html
@@ -75,11 +75,11 @@ permalink: /404.html
 	    </p>
 
 	    <p>
-		Perhaps the information you are looking for lives at
+		Perhaps the information you are looking for lives on
 	    </p>
 	    
 	    <div id="suggestions">
-		<a href="http://www.sesync.org">www.sesync.org</a>
+		<a href="https://github.com/SESYNC-ci/sesync-ci.github.io/">GitHub</a>
 	    </div>
 
 	</div>
