--- a/rslurm/index.html
+++ b/rslurm/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="utf-8">
-  <title>Redirecting to https://earthlab.github.io/rslurm/</title>
-  <meta http-equiv="refresh" content="0; URL=https://earthlab.github.io/rslurm/">
-  <link rel="canonical" href="https://earthlab.github.io/rslurm/">
-</head>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Redirecting to https://earthlab.github.io/rslurm/</title>
+    <meta http-equiv="refresh" content="0; URL=https://earthlab.github.io/rslurm/">
+    <link rel="canonical" href="https://earthlab.github.io/rslurm/">
+  </head>
+</html>
